# ytapis

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish-github-packages.yml  publish-go.yml  publish-npm.yml  publish-pypi.yml
apps/: index.html
apps/dart/: build.bat  pubspec.yaml  server.dart
apps/flutter/: README.md  build.bat  pubspec.yaml
apps/flutter/lib/: main.dart
apps/flutter/test/: widget_test.dart
apps/flutter/windows/: CMakeLists.txt
apps/flutter/windows/runner/: Runner.rc  main.cpp
apps/go/: build.bat  go.mod  main.go
apps/go/static/: index.html
apps/node/: README.md  build.bat  main.js  package-lock.json  package.json  preload.js  server.js
apps/node/renderer/: index.html
apps/python/: README.md  app.py  build.bat  requirements.txt
apps/search/: index.html
apps/video-info/: index.html
dart/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/lib/: ytapi.dart
go/: README.md  go.mod  ytapi.go
go/cmd/ytapi/: main.go
python/: README.md  pyproject.toml
python/ytapi/: __init__.py
python/ytapis/: cli.py  core.py
