[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytapis"
version = "1.0.0"
description = "Search YouTube and get video metadata — no API key required"
readme = "README.md"
license = { text = "MIT" }
keywords = ["youtube", "search", "scraper", "metadata"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ytapis/ytapis"
Repository = "https://github.com/ytapis/ytapis"

[project.scripts]
ytapis = "ytapis.cli:main"

[tool.setuptools.packages.find]
include = ["ytapis*"]
